project/language/antlr/GQLanguageParser.py
# Generated from GQLanguage.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GQLanguageParser ( Parser ):

    grammarFileName = "GQLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'let'", "'='", "'print'", "'('", 
                     "')'", "'set_start'", "'in'", "'set_final'", "'add_start'", 
                     "'to'", "'add_final'", "'get_start'", "'get_final'", 
                     "'get_reachable'", "'get_vertices'", "'get_edges'", 
                     "'get_labels'", "'map'", "'use'", "'filter'", "'load'", 
                     "'and'", "'++'", "'or'", "'closure'", "'step'", "'contains'", 
                     "'{'", "'}'", "','", "'..'", "'lambda'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "VARNAME", 
                      "BOOL", "INT", "STRING", "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_bind = 2
    RULE_print = 3
    RULE_var = 4
    RULE_val = 5
    RULE_expr = 6
    RULE_set = 7
    RULE_lambda = 8
    RULE_tuple = 9

    ruleNames =  [ "prog", "stmt", "bind", "print", "var", "val", "expr", 
                   "set", "lambda", "tuple" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    VARNAME=35
    BOOL=36
    INT=37
    STRING=38
    COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GQLanguageParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.StmtContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.StmtContext,i)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = GQLanguageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==4:
                self.state = 20
                self.stmt()
                self.state = 21
                self.match(GQLanguageParser.T__0)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(GQLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bind(self):
            return self.getTypedRuleContext(GQLanguageParser.BindContext,0)


        def print_(self):
            return self.getTypedRuleContext(GQLanguageParser.PrintContext,0)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GQLanguageParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.bind()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.print_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(GQLanguageParser.VarContext,0)


        def expr(self):
            return self.getTypedRuleContext(GQLanguageParser.ExprContext,0)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_bind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBind" ):
                listener.enterBind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBind" ):
                listener.exitBind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBind" ):
                return visitor.visitBind(self)
            else:
                return visitor.visitChildren(self)




    def bind(self):

        localctx = GQLanguageParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(GQLanguageParser.T__1)
            self.state = 35
            self.var()
            self.state = 36
            self.match(GQLanguageParser.T__2)
            self.state = 37
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GQLanguageParser.ExprContext,0)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = GQLanguageParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(GQLanguageParser.T__3)
            self.state = 40
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(GQLanguageParser.VARNAME, 0)

        def getRuleIndex(self):
            return GQLanguageParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = GQLanguageParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(GQLanguageParser.VARNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(GQLanguageParser.BOOL, 0)

        def INT(self):
            return self.getToken(GQLanguageParser.INT, 0)

        def STRING(self):
            return self.getToken(GQLanguageParser.STRING, 0)

        def getRuleIndex(self):
            return GQLanguageParser.RULE_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVal" ):
                listener.enterVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVal" ):
                listener.exitVal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVal" ):
                return visitor.visitVal(self)
            else:
                return visitor.visitChildren(self)




    def val(self):

        localctx = GQLanguageParser.ValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_val)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 481036337152) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(GQLanguageParser.VarContext,0)


        def val(self):
            return self.getTypedRuleContext(GQLanguageParser.ValContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.ExprContext,i)


        def set_(self):
            return self.getTypedRuleContext(GQLanguageParser.SetContext,0)


        def lambda_(self):
            return self.getTypedRuleContext(GQLanguageParser.LambdaContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(GQLanguageParser.TupleContext,0)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GQLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 47
                self.var()
                pass

            elif la_ == 2:
                self.state = 48
                self.val()
                pass

            elif la_ == 3:
                self.state = 49
                self.match(GQLanguageParser.T__4)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(GQLanguageParser.T__5)
                pass

            elif la_ == 4:
                self.state = 53
                self.match(GQLanguageParser.T__6)
                self.state = 54
                self.expr(0)
                self.state = 55
                self.match(GQLanguageParser.T__7)
                self.state = 56
                self.expr(22)
                pass

            elif la_ == 5:
                self.state = 58
                self.match(GQLanguageParser.T__8)
                self.state = 59
                self.expr(0)
                self.state = 60
                self.match(GQLanguageParser.T__7)
                self.state = 61
                self.expr(21)
                pass

            elif la_ == 6:
                self.state = 63
                self.match(GQLanguageParser.T__9)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(GQLanguageParser.T__10)
                self.state = 66
                self.expr(20)
                pass

            elif la_ == 7:
                self.state = 68
                self.match(GQLanguageParser.T__11)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(GQLanguageParser.T__10)
                self.state = 71
                self.expr(19)
                pass

            elif la_ == 8:
                self.state = 73
                self.match(GQLanguageParser.T__12)
                self.state = 74
                self.expr(18)
                pass

            elif la_ == 9:
                self.state = 75
                self.match(GQLanguageParser.T__13)
                self.state = 76
                self.expr(17)
                pass

            elif la_ == 10:
                self.state = 77
                self.match(GQLanguageParser.T__14)
                self.state = 78
                self.expr(16)
                pass

            elif la_ == 11:
                self.state = 79
                self.match(GQLanguageParser.T__15)
                self.state = 80
                self.expr(15)
                pass

            elif la_ == 12:
                self.state = 81
                self.match(GQLanguageParser.T__16)
                self.state = 82
                self.expr(14)
                pass

            elif la_ == 13:
                self.state = 83
                self.match(GQLanguageParser.T__17)
                self.state = 84
                self.expr(13)
                pass

            elif la_ == 14:
                self.state = 85
                self.match(GQLanguageParser.T__18)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(GQLanguageParser.T__19)
                self.state = 88
                self.expr(12)
                pass

            elif la_ == 15:
                self.state = 90
                self.match(GQLanguageParser.T__20)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(GQLanguageParser.T__19)
                self.state = 93
                self.expr(11)
                pass

            elif la_ == 16:
                self.state = 95
                self.match(GQLanguageParser.T__21)
                self.state = 96
                self.expr(10)
                pass

            elif la_ == 17:
                self.state = 97
                self.match(GQLanguageParser.T__25)
                self.state = 98
                self.expr(6)
                pass

            elif la_ == 18:
                self.state = 99
                self.match(GQLanguageParser.T__26)
                self.state = 100
                self.expr(0)
                self.state = 101
                self.match(GQLanguageParser.T__19)
                self.state = 102
                self.expr(5)
                pass

            elif la_ == 19:
                self.state = 104
                self.set_()
                pass

            elif la_ == 20:
                self.state = 105
                self.lambda_()
                pass

            elif la_ == 21:
                self.state = 106
                self.tuple_()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = GQLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 109
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 110
                        self.match(GQLanguageParser.T__22)
                        self.state = 111
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = GQLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 112
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 113
                        self.match(GQLanguageParser.T__23)
                        self.state = 114
                        self.expr(9)
                        pass

                    elif la_ == 3:
                        localctx = GQLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 116
                        self.match(GQLanguageParser.T__24)
                        self.state = 117
                        self.expr(8)
                        pass

                    elif la_ == 4:
                        localctx = GQLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 118
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 119
                        self.match(GQLanguageParser.T__27)
                        self.state = 120
                        self.expr(5)
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.ExprContext,i)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(GQLanguageParser.INT)
            else:
                return self.getToken(GQLanguageParser.INT, i)

        def getRuleIndex(self):
            return GQLanguageParser.RULE_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet" ):
                listener.enterSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet" ):
                listener.exitSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet" ):
                return visitor.visitSet(self)
            else:
                return visitor.visitChildren(self)




    def set_(self):

        localctx = GQLanguageParser.SetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set)
        self._la = 0 # Token type
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(GQLanguageParser.T__28)
                self.state = 127
                self.match(GQLanguageParser.T__29)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(GQLanguageParser.T__28)
                self.state = 129
                self.expr(0)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==31:
                    self.state = 130
                    self.match(GQLanguageParser.T__30)
                    self.state = 131
                    self.expr(0)
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 137
                self.match(GQLanguageParser.T__29)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(GQLanguageParser.T__28)
                self.state = 140
                self.match(GQLanguageParser.INT)
                self.state = 141
                self.match(GQLanguageParser.T__31)
                self.state = 142
                self.match(GQLanguageParser.INT)
                self.state = 143
                self.match(GQLanguageParser.T__29)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GQLanguageParser.ExprContext,0)


        def var(self):
            return self.getTypedRuleContext(GQLanguageParser.VarContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(GQLanguageParser.TupleContext,0)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_lambda

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambda" ):
                listener.enterLambda(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambda" ):
                listener.exitLambda(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambda" ):
                return visitor.visitLambda(self)
            else:
                return visitor.visitChildren(self)




    def lambda_(self):

        localctx = GQLanguageParser.LambdaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lambda)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(GQLanguageParser.T__32)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.state = 147
                self.var()
                pass
            elif token in [5]:
                self.state = 148
                self.tuple_()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.match(GQLanguageParser.T__33)
            self.state = 152
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.VarContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.VarContext,i)


        def val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.ValContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.ValContext,i)


        def tuple_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GQLanguageParser.TupleContext)
            else:
                return self.getTypedRuleContext(GQLanguageParser.TupleContext,i)


        def getRuleIndex(self):
            return GQLanguageParser.RULE_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple" ):
                listener.enterTuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple" ):
                listener.exitTuple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple" ):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)




    def tuple_(self):

        localctx = GQLanguageParser.TupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(GQLanguageParser.T__4)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.state = 155
                self.var()
                pass
            elif token in [36, 37, 38]:
                self.state = 156
                self.val()
                pass
            elif token in [5]:
                self.state = 157
                self.tuple_()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 160
                self.match(GQLanguageParser.T__30)
                self.state = 164
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35]:
                    self.state = 161
                    self.var()
                    pass
                elif token in [36, 37, 38]:
                    self.state = 162
                    self.val()
                    pass
                elif token in [5]:
                    self.state = 163
                    self.tuple_()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(GQLanguageParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 4)
         




